syntax = "proto3";

// Doc: https://developers.google.com/protocol-buffers/docs/proto3

package sample;

option java_package = "sample";
option java_outer_classname = "UserProto";
// option java_multiple_files = true; 这个会将类分开，避免跟model重名可以不分开，如果太大可以考虑分开
option objc_class_prefix = "SAMPLE";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message Users {
  int32 page = 1;
  int32 limit = 2;
  int32 count = 3;
  repeated User nodes = 4;
}

message AddUserRequest {
  string username = 2 [(validate.rules).string = {min_len: 1, max_len: 100}];
  string email = 3 [(validate.rules).string = {min_len: 1, max_len: 20000}];
  string password = 4 [(validate.rules).string = {min_len: 1, max_len: 20000}];
  string role = 5 [(validate.rules).string = {min_len: 1, max_len: 20}];
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string role = 3;
}

message GetUserRequest {
  string email = 1;
  string password = 2;
}

service UserService {
  rpc AddUser (AddUserRequest) returns (User) {}
  rpc UpdateUser (UpdateUserRequest) returns (User) {}
  rpc ListUsers (ListUsersRequest) returns (Users) {}
  rpc GetUser (GetUserRequest) returns (User) {}

}
